moving to Java 16 with IDE upgrade