@@ -32,8 +32,8 @@
                 <version>3.8.1</version>
                 <configuration>
                     <fork>true</fork>
-                    <source>15</source> <!-- intelliJ still stuck here-->
-                    <target>15</target>
+                    <source>16</source>
+                    <target>16</target>
                     <compilerArgs>
                         <arg>--enable-preview</arg>
                         <arg>-Xlint:all</arg>
@@ -90,6 +90,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
